--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:id="@+id/ClearButton"
         android:onClick="onClickClearButton" />
 
-    <com.example.jfan.myapplication.BrushSettingsView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/brushSettings"
@@ -206,7 +206,7 @@
             android:layout_alignParentEnd="true"
             android:progress="0"
             android:max="50"/>
-    </com.example.jfan.myapplication.BrushSettingsView>
+    </RelativeLayout>
 
     <ToggleButton
         android:text="Randomize"
